--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "knex": "^0.18.4",
     "koa": "^2.7.0",
     "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1"
   }
 }
