--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon index.js --watch controllers --watch view --watch managers",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -12,6 +12,7 @@
   "dependencies": {
     "knex": "^0.18.4",
     "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
     "koa-ejs": "^4.2.0",
     "koa-router": "^7.4.0",
     "mysql": "^2.17.1",
